--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>flatiron school</title>
+    <title>Document</title>
   </head>
   <body>
-    "</a>href="https://flatironschool.com</a>
+    <a href="https://flatironschool.com">Flatiron School</a>
   </body>
-  
 </html>
